# BoneBET

./: .dockerignore.md  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_api.py  run_bot.py
app/: config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  bet.py  health.py
app/api/v1/schemas/: bet.py
app/bot/: telegram_bot.py
app/clients/: __init__.py  base.py  cs2_analytics.py  exceptions.py
app/core/: __init__.py
app/core/ai/: __init__.py  analyzer.py  client.py  prompts.py
app/core/calculator/: normalizer.py
app/core/metrics/: __init__.py  base.py  consistency.py  form_trend.py  h2h_win_rate.py  map_stats.py  recent_win_rate.py  team_firepower.py  true_rating.py
app/db/: redis_client.py  session.py
app/models/: __init__.py  analysis_cache.py  base.py  data_version.py  historical_prediction.py  match.py  metric_snapshot.py  player.py  player_match_stats.py  team.py
app/repositories/: player_repository.py  team_repository.py
app/services/: analysis_service.py  bet_service.py  player_analysis_service.py  player_service.py  sync_data.py  sync_service.py  team_service.py
app/services/scraper/: __init.py  bo3_client.py  browser_singleton.py  match_scraper.py  team_matches_scraper.py  team_rankings_scraper.py  team_scraper.py
app/utils/: logger.py
migrations/: env.py
migrations/versions/: a3aa27ff4b02_initial_models.py  ab4edaf4ff10_initial_models.py
scripts/: check_db.py  deep_analysis.py  sync_data.py  test_ai.py
tests/: test_cs2_client.py
